--- a/main.html
+++ b/main.html
@@ -8,6 +8,59 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>Car Insurance Registration Form</h2>
+
+<form method="post">
+
+    <!-- Name -->
+    <label for="name">Name</label>
+    <input type="text" id="name" required>
+    <br><br>
+
+    <!-- Email -->
+    <label for="email">Email</label>
+    <input type="email" id="email" required>
+    <br><br>
+
+    <!-- Gender -->
+    <label>Gender</label>
+    <br>
+    <input type="radio" id="male" name="gender" required>
+    <label for="male">Male</label>
+
+    <input type="radio" id="female" name="gender" required>
+    <label for="female">Female</label>
+    <br><br>
+
+    <!-- Car Brands -->
+    <label for="cars">Car Brands</label>
+    <select id="cars">
+        <option value="">--Select--</option>
+        <option value="BMW">BMW</option>
+        <option value="Audi">Audi</option>
+        <option value="Mercedez">Mercedez</option>
+    </select>
+    <br><br>
+
+    <!-- Car Age -->
+    <label for="carage">Car Age</label>
+    <input type="number" id="carage" required>
+    <br><br>
+
+    <!-- Date of Purchase -->
+    <label for="dop">Date of Purchase</label>
+    <input type="date" id="dop" required>
+    <br><br>
+
+    <!-- Password -->
+    <label for="password">Password</label>
+    <input type="password" id="password" required>
+    <br><br>
+
+    <!-- Submit Button -->
+    <button type="submit">Submit</button>
+
+</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
